# ORT-obligatorio-MLP

./: .gitignore  Dockerfile  README(images.md)  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: streamlit_app.py
docs/: examples.json
medical-10/: README.dataset.txt  README.roboflow.txt  data.yaml
medical-10/test/labels/: 20_mp4-0015_jpg.rf.ad6b276f76f680eb73c1e3410d32001a.txt  video_2024-08-07_00-30-16_mp4-0914_jpg.rf.8c4313c7f940bb538e65be0ca6cddba8.txt  video_2024-08-07_00-30-22_mp4-0081_jpg.rf.a842bc2327d014dd428e9cc9f863a485.txt  video_2024-08-07_23-50-28_mp4-0822_jpg.rf.1bb5429c08432a34fe063abc3e0d223e.txt  video_2024-08-07_23-50-28_mp4-0825_jpg.rf.dc374e6eb8a7467edbb5fc97c5c7ac5b.txt
medical-10/train/labels/: 15_mp4-0002_jpg.rf.e546a95260aed50227a7d792f91a2ddc.txt  15_mp4-0003_jpg.rf.eeb6539df566d0f120b555cd1437f671.txt  15_mp4-0007_jpg.rf.5b86c5fdbaff916d10a91be0cf569dbf.txt  15_mp4-0010_jpg.rf.0e2dd3f71b226a7221c3e330b6760e15.txt  15_mp4-0011_jpg.rf.dda7646b672cccdac43ff6a083100998.txt  15_mp4-0013_jpg.rf.0c283bffffd286f1def9c769579a6dd3.txt  (+667 more)
scripts/: compare_models.py  convert_dataset.py  download_dataset.py
src/api/: app.py
src/core/: evaluate.py  gradcam.py  model.py  train.py  yolo_model.py
src/data/: dataset.py
src/settings/: config.py  settings.yml
src/structs/: payload.py  texts.py
src/utils/: files.py  logger.py  metric.py
tests/: test_api.py
tests/api/: test_routers.py
tests/core/: test_classification.py  test_gradcam.py  test_inference.py  test_model.py  test_preprocessor.py
(+858 files in other folders)
