[project]
name = "ortmlprod-mar2025-practico-5-model-serving-practico-5-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Morón Santos",email = "santimoron001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers (>=5.5.4,<6.0.0)",
    "torch",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry] 
package-mode = false